# esp-hal-sht31

./: Cargo.toml  README.md
src/: main.rs
