[package]
name = "esp-hal-sht31"
version = "0.1.0"
authors = ["Alex K <kleydints@petalmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = "0.8.1"
esp-backtrace = { version = "0.11.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = [ "esp32s3" ] }
esp-println = { version = "0.9.0", features = ["esp32s3", "log"] }
log = { version = "0.4.20" }
sht31 = "0.3.0"
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
